# fideslog

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  dev-requirements.txt  docker-compose.yml  fideslog.env  fideslog.toml  pyproject.toml  requirements.txt  sample-task-definition.json  setup.cfg  setup.py  task-definition.json  versioneer.py
.github/workflows/: build_deploy.yml  deploy.yml  pr_checks.yml  publish_package.yml
api/: requirements.txt
api/api/: config.py  logger.py  main.py
api/api/database/: models.py
api/api/routes/: api.py
conda/: meta.yaml
database/: db_creation.sql  role_warehouse_user_creation.sql  schema_table_creation.sql
fideslog/api/: api.py  config.py  errors.py  logger.py  main.py  rate_limiter.py  requirements.txt  router.py  setup.py
fideslog/api/api/: config.py  main.py
fideslog/api/database/: __init__.py  csv_writer.py  dal.py  data_access.py  database.py  events.py  models.py  registrations.py
fideslog/api/endpoints/: events.py  health.py  test_events.py
fideslog/api/models/: __init__.py  analytics_event.py  api_key.py  cli_api_mapping.py  manifest_file_counts.py  models.py
fideslog/api/routes/: api.py  events.py  health.py  registrations.py
fideslog/api/schemas/: analytics_event.py  cli_api_mapping.py  registration.py  user_registration_event.py  validation.py
fideslog/api/utils/: auth.py  exceptions.py
fideslog/sdk/python/: README.md  __init__.py  _version.py  client.py  event.py  (+4 more)
tests/: test_placeholder.py
tests/api/: test_models.py  test_routes.py  test_schemas.py
tests/sdk/: test_sdk.py
(+7 files in other folders)
